language/move-lang/tests/move_check/parser/number_literal_too_long_u128.move
module M {
    fun long_u128() {
        340282366920938463463374607431768211455u128;
        340282366920938463463374607431768211456u128;
    }
}
